# rust_stuff

./: .gitignore
.devcontainer/: devcontainer.json
actix-gcd/src/: main.rs
adder/src/: lib.rs
bank/src/: main.rs
car_shoot/: Cargo.toml
car_shoot/src/: main.rs
closures/src/: main.rs
coursera/src/: main.rs  test_file.rs
dungeoncrawl/src/: main.rs  maps.rs  player.rs
errors/: Cargo.toml
errors/src/: lib.rs  main.rs
exercism/src/: main.rs  reverse_string.rs
flap/: Cargo.toml
flap/src/: main.rs
functional/src/: closures.rs  main.rs
generics/src/: main.rs
guess-game/: Cargo.toml
road_race/: Cargo.toml
rust_servers/ch7/ezytutors/tutor-web-app-ssr/: .env  Cargo.toml
rust_servers/ch7/ezytutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handlers.rs  models.rs  routes.rs  state.rs
rust_servers/ch7/ezytutors/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/: static-web-page.html  tutor-styles.css
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/iter1/: index.html
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/iter2/: form.html  user.html
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/iter3/: list.html
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/iter4/: list.html
rust_servers/ch7/ezytutors/tutor-web-app-ssr/static/iter5/: register.html
rust_servers/ezytutors/tutor-nodb/: Cargo.toml
rust_servers/ezytutors/tutor-nodb/src/: handlers.rs
rusty_engine_tut/: Cargo.toml
testing/: Cargo.toml
threads_channels/: Cargo.toml
udemy/: Cargo.toml
(+65 files in other folders)
