[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["denys"]
edition = "2021"
default-run = "tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
serde = { version = "1.0.218", features = ["derive"] }
chrono = {version = "0.4.40", features = ["serde"]}