[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.2.1"
actix-files="0.6.2"
tera = "1.17.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
awc = "3.6.0"
dotenv = "0.15.0"
sqlx = {version = "0.8.3", default-features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
rust-argon2 = "1.0.0"

[dev-dependencies]
actix-rt = "2.7.0"